# glsl2spirv

./: CMakeLists.txt  README.md  ResourceLimits.cpp  ResourceLimits.h  StandAlone.cpp  glsl2spirv.cpp  glsl2spirv.hpp
